# computer-graphics-course-project

./: .gitmodules  CMakeLists.txt
.github/workflows/: build.yml
src/: main.cpp
